syntax = "proto3";

package "gateway.v2";

option go_package = "gateway_service/generated/v2/go;pb";



message Timestamp {
  int64 unix_ms = 1;
}

message RequestMeta {
  string request_id = 1;
  Timestamp time = 2;
}
message ClientRequestToGateway {
  RequestMeta meta = 1;
  string user_prompt = 2;
}

message GatewayResponseToClient {
  RequestMeta meta = 1;
  string message = 2;
}

message GatewayRequestToPlanner {
  RequestMeta meta = 1;
  string user_prompt = 2;
}

message PlannerResponseToGateway {
  RequestMeta meta = 1;
  string message = 2;
}

service Gateway {
  rpc HandleRequest (ClientRequestToGateway) returns (GatewayResponseToClient);
  rpc HandleGatewayRequestToPlanner(GatewayRequestToPlanner) returns (PlannerResponseToGateway)
}
